--- a/libexec/tftp-proxy/Makefile
+++ b/libexec/tftp-proxy/Makefile
@@ -7,7 +7,7 @@ SRCS=	tftp-proxy.c filter.c
 MAN=	tftp-proxy.8
 
 CFLAGS+= -I${SRCTOP}/lib/libpfctl -I${OBJTOP}/lib/libpfctl
-LIBADD= pfctl
+LIBADD= nv pfctl
 
 WARNS?=	3
 
