Revert "Add libnv to libpfctl consumers to fix the build."
This reverts commit 7f33a23382251d316cdd0b5d23c2426325253d81.

(cherry picked from commit ec4e58dc158b3cb456324f1e2842ee0775c0306c)

--- a/libexec/tftp-proxy/Makefile
+++ b/libexec/tftp-proxy/Makefile
@@ -7,7 +7,7 @@ SRCS=	tftp-proxy.c filter.c
 MAN=	tftp-proxy.8
 
 CFLAGS+= -I${SRCTOP}/lib/libpfctl -I${OBJTOP}/lib/libpfctl
-LIBADD= nv pfctl
+LIBADD= pfctl
 
 WARNS?=	3
 
