--- a/usr.bin/awk/Makefile
+++ b/usr.bin/awk/Makefile
@@ -22,12 +22,12 @@ CLEANFILES= maketab proctab.c awkgram.tab.h
 awkgram.tab.h: awkgram.h
 	ln -sf ${.ALLSRC:M*.h} ${.TARGET}
 
-proctab.c: maketab awkgram.h
-	${BTOOLSPATH:U.}/maketab awkgram.h > proctab.c
+proctab.c: maketab awkgram.tab.h
+	${BTOOLSPATH:U.}/maketab awkgram.tab.h > proctab.c
 
 DEPENDOBJS+= maketab
 build-tools: maketab
-maketab: ${BUILD_TOOLS_META}
+maketab: awkgram.tab.h ${BUILD_TOOLS_META}
 
 # awk needs some work before we can connect these tests to the build
 #HAS_TESTS=
